[project]
name = "comfyui-sparktts"
description = "Nodes related to [Spark-TTS](https://github.com/SparkAudio/Spark-TTS)."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/civen-cn/ComfyUI_SparkTTS"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "comfyuisparktts"
DisplayName = "ComfyUI-SparkTTS"
Icon = ""
